Name:                happstack-server-tls-cryptonite
Version:             0.1.0
Synopsis:            extend happstack-server with native https:// support (TLS/SSL)
Description:         extend happstack-server with native https:// support (TLS/SSL)
License:             BSD3
Author:              Andrey Sverdlichenko
Maintainer:          blaze@ruddy.ru
Copyright:           2012 Jeremy Shaw, 2015 Andrey Sverdlichenko
Category:            Web, Happstack
Build-type:          Simple
Cabal-version:       >=1.6

source-repository head
    type:     git
    location: https://github.com/rblaze/happstack-server-tls-cryptonite.git

Library
    hs-source-dirs:    src
    ghc-options:       -W -Wall -fno-warn-unused-do-bind
    Exposed-modules:   Happstack.Server.Internal.TimeoutSocketTLS
                       Happstack.Server.Internal.TLS
                       Happstack.Server.SimpleHTTPS

    Build-Depends:     base                  <  5,
                       bytestring            >= 0.9 && < 0.11,
                       extensible-exceptions == 0.1.*,
                       happstack-server      >= 6.6.4 && < 7.5,
                       hslogger              >=  1.1 && < 1.3,
                       network               >= 2.3 && < 2.7,
                       sendfile              == 0.7.*,
                       time                  >= 1.2 && < 1.6,
                       tls,
                       data-default-class

    if !os(windows)
       Build-Depends:  unix
       cpp-options:    -DUNIX
